--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,8 @@
     "date-fns": "^3.6.0",
     "ioredis": "^5.6.0",
     "lucide-react": "^0.453.0",
-    "mongoose": "^8.7.3",
+    "mongodb": "6.10.0",
+    "mongoose": "8.8.0",
     "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.3.0",
