Various copy updates in dashboard (#32)
* Various copy udpates

* Minor refactor

* Minor styling adjust app list badge

* Add test actions

* Update CI

* Trigger CI

* Revert "Trigger CI"

This reverts commit 6e256989fb44576ea47db5550a336a46db3c3f92.

* Update CI

--- a/.github/workflows/ci-app.yml
+++ b/.github/workflows/ci-app.yml
@@ -1,6 +1,12 @@
-name: Node.js CI (Proxy)
+name: App CI
 
-on: [push]
+on:
+  push:
+    paths:
+      - "app/**"
+  pull_request:
+    paths:
+      - "app/**"
 
 jobs:
   build:
@@ -21,6 +27,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm --filter proxy i
-      - run: pnpm run build:proxy
-      - run: pnpm run test:proxy
+        run: pnpm --filter app i
+      - run: pnpm run build:app
