--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,24 +9,23 @@ env:
 
 jobs:
   build-and-push-app:
-    runs-on: ${{ matrix.runner }}
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
-    strategy:
-      matrix:
-        include:
-          - runner: ubuntu-latest
-            platform: linux/amd64
-            arch: amd64
-          - runner: ubuntu-24.04-arm
-            platform: linux/arm64
-            arch: arm64
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install cosign
+        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
+        with:
+          cosign-release: "v2.2.4"
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
@@ -44,8 +43,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app
           tags: |
-            type=raw,value=latest-${{ matrix.arch }}
-            type=raw,value=${{ github.sha }}-${{ matrix.arch }}
+            type=raw,value=latest
+            type=raw,value=${{ github.sha }}
 
       - name: Build and push app Docker image
         id: build-and-push
@@ -53,15 +52,20 @@ jobs:
         with:
           context: ./app
           push: true
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  merge-and-sign-app:
+      - name: Sign the published app Docker image
+        env:
+          TAGS: ${{ steps.meta.outputs.tags }}
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+
+  build-and-push-proxy:
     runs-on: ubuntu-latest
-    needs: build-and-push-app
     permissions:
       contents: read
       packages: write
@@ -76,58 +80,8 @@ jobs:
         with:
           cosign-release: "v2.2.4"
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create and push multi-platform manifest for app
-        id: manifest
-        run: |
-          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:latest \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:latest-amd64 \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:latest-arm64
-          
-          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:${{ github.sha }} \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:${{ github.sha }}-amd64 \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:${{ github.sha }}-arm64
-          
-          # Get the digest of the manifest
-          DIGEST=$(docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:latest --format '{{.Manifest.Digest}}')
-          echo "digest=${DIGEST}" >> $GITHUB_OUTPUT
-
-      - name: Sign the published app Docker image
-        env:
-          DIGEST: ${{ steps.manifest.outputs.digest }}
-        run: |
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app@${DIGEST}
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:latest
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-app:${{ github.sha }}
-
-  build-and-push-proxy:
-    runs-on: ${{ matrix.runner }}
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-    strategy:
-      matrix:
-        include:
-          - runner: ubuntu-latest
-            platform: linux/amd64
-            arch: amd64
-          - runner: ubuntu-24.04-arm
-            platform: linux/arm64
-            arch: arm64
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
@@ -145,8 +99,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy
           tags: |
-            type=raw,value=latest-${{ matrix.arch }}
-            type=raw,value=${{ github.sha }}-${{ matrix.arch }}
+            type=raw,value=latest
+            type=raw,value=${{ github.sha }}
 
       - name: Build and push proxy Docker image
         id: build-and-push
@@ -154,58 +108,14 @@ jobs:
         with:
           context: ./proxy
           push: true
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  merge-and-sign-proxy:
-    runs-on: ubuntu-latest
-    needs: build-and-push-proxy
-    permissions:
-      contents: read
-      packages: write
-      id-token: write
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install cosign
-        uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
-        with:
-          cosign-release: "v2.2.4"
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
-      - name: Log into registry ${{ env.REGISTRY }}
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create and push multi-platform manifest for proxy
-        id: manifest
-        run: |
-          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:latest \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:latest-amd64 \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:latest-arm64
-          
-          docker buildx imagetools create -t ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:${{ github.sha }} \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:${{ github.sha }}-amd64 \
-            ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:${{ github.sha }}-arm64
-          
-          # Get the digest of the manifest
-          DIGEST=$(docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:latest --format '{{.Manifest.Digest}}')
-          echo "digest=${DIGEST}" >> $GITHUB_OUTPUT
-
       - name: Sign the published proxy Docker image
         env:
-          DIGEST: ${{ steps.manifest.outputs.digest }}
-        run: |
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy@${DIGEST}
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:latest
-          cosign sign --yes ${{ env.REGISTRY }}/${{ env.BASE_IMAGE_NAME }}-proxy:${{ github.sha }}
+          TAGS: ${{ steps.meta.outputs.tags }}
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
