--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@microsoft/clarity": "^1.0.0",
     "@next/third-parties": "^15.2.3",
     "@polar-sh/sdk": "^0.34.17",
     "@radix-ui/react-accordion": "^1.2.3",
