--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
     "standardwebhooks": "^1.0.0",
+    "statuses": "^2.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tinycolor2": "^1.6.0",
@@ -63,6 +64,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/statuses": "^2.0.6",
     "@types/tinycolor2": "^1.4.6",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
