--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,12 @@ REDIS_PASSWORD=corsfix
 KEK_VERSION_1=
 # generate this value using `openssl rand -base64 32`
 AUTH_SECRET=
-DOMAIN=localhost
+
+# Full domain for the app (e.g., app.example.com or admin-cors.example.com)
+APP_DOMAIN=app.localhost
+
+# Full domain for the proxy (e.g., proxy.example.com or proxy-cors.example.com)
+PROXY_DOMAIN=proxy.localhost
 
 # Set to true to disable new user signups (self-hosted only, ignored when CLOUD=true)
 # Recommended: First signup, then set DISABLE_SIGNUP=true to prevent other users from registering
