Add customizable selfhost subdomain (#87)
* Add customizable selfhost subdomain

* Update .env.example

--- a/proxy/.env.example
+++ b/proxy/.env.example
@@ -3,3 +3,6 @@ REDIS_URI=redis://localhost
 
 # generate this using `openssl rand -base64 32`
 KEK_VERSION_1=
+
+# Full domain for the app (e.g., app.example.com or admin-cors.example.com)
+APP_DOMAIN=app.localhost
