Add support for custom tls cert

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ DISABLE_SIGNUP=false
 
 # Rate limit (requests per minute) for self-hosted instances (default: 180)
 RPM=180
+
+# Custom TLS certificates (optional)
+# Set paths to your cert and key files, then uncomment the tls lines in Caddyfile
+TLS_CERT=
+TLS_KEY=
