--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ DISABLE_SIGNUP=false
 # Rate limit (requests per minute) for self-hosted instances (default: 180)
 RPM=180
 
+# Custom ports (optional, if 80/443 are already in use)
+HTTP_PORT=80
+HTTPS_PORT=443
+
 # Custom TLS certificates (optional)
 # Set paths to your cert and key files, then uncomment the tls lines in Caddyfile
 TLS_CERT=
