--- a/Caddyfile
+++ b/Caddyfile
@@ -1,3 +1,13 @@
+# HTTP to HTTPS redirects
+http://{$APP_DOMAIN:app.localhost} {
+    redir https://{host}:{$HTTPS_PORT:443}{uri} permanent
+}
+
+http://{$PROXY_DOMAIN:proxy.localhost} {
+    redir https://{host}:{$HTTPS_PORT:443}{uri} permanent
+}
+
+# HTTPS
 {$APP_DOMAIN:app.localhost} {
     reverse_proxy app:3000
     # tls /certs/cert.pem /certs/key.pem
