--- a/prod.yaml
+++ b/prod.yaml
@@ -31,8 +31,8 @@ services:
       - KEK_VERSION_1=${KEK_VERSION_1}
       - AUTH_SECRET=${AUTH_SECRET}
       - AUTH_TRUST_HOST=true
-      - AUTH_URL=https://${APP_DOMAIN}
-      - PROXY_DOMAIN=${PROXY_DOMAIN}
+      - AUTH_URL=https://${APP_DOMAIN}:${HTTPS_PORT:-443}
+      - PROXY_DOMAIN=${PROXY_DOMAIN}:${HTTPS_PORT:-443}
   proxy:
     image: ghcr.io/corsfix/corsfix-proxy:latest
     pull_policy: always
@@ -46,8 +46,8 @@ services:
     image: caddy:2-alpine
     restart: always
     ports:
-      - "80:80"
-      - "443:443"
+      - "${HTTP_PORT:-80}:80"
+      - "${HTTPS_PORT:-443}:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - .caddy/data:/data
@@ -57,6 +57,7 @@ services:
     environment:
       - APP_DOMAIN=${APP_DOMAIN}
       - PROXY_DOMAIN=${PROXY_DOMAIN}
+      - HTTPS_PORT=${HTTPS_PORT:-443}
     depends_on:
       - app
       - proxy
